--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
-ul li {
-    list-style-type: armenian;
+.app-wrapper {
+    display: grid;
+    grid-template-areas:
+    "h h "
+    "n c ";
+    grid-template-rows: 100px 1fr;
+    grid-template-columns: 200px 5fr;
+    grid-gap: 10px;
+    width: 100vw;
+
 }
+
