--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@
     grid-template-columns: 200px 5fr;
     grid-gap: 10px;
     width: 100vw;
+}
 
+.app-wrapper-content {
+    grid-area: c;
+    background-color: #00d9ff;
 }
 
