--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -13,3 +13,11 @@
     width: 100vw;
 }
 
+.postsBlock {
+    padding: 10px;
+}
+
+textarea, button {
+    display: block;
+    margin-bottom: 10px;
+}
