--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,16 +1,22 @@
 
 .dialogs {
     display: grid;
-    grid-template-columns: 2fr 10fr;
+    grid-template-columns: 4fr 10fr;
 }
-
 
 .dialogItems {
     padding: 10px;
 }
 
 .dialog {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
 
+.dialog img {
+    width: 50px;
+    margin-bottom: 20px;
 }
 
 .active {
@@ -19,8 +25,13 @@
 
 .messages {
     padding: 10px;
+    margin: 0 auto;
 }
 
 .message {
-
+    width: 200px;
+    padding: 20px;
+    background-color: #fff;
+    margin-bottom: 10px;
+    border-radius: 15px;
 }
