--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,13 @@
 
 .header {
     grid-area: h;
-    background-color: #005b31;
+    background-color: #31414B;
+    border-radius: 10px;
+
+    /*box-shadow: 0 0px 15px 0 rgba(0,0,0,0.7);*/
 }
 
 .header img {
-    width: 60px;
+    width: 50px;
+    padding: 15px;
 }
