--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,14 +1,20 @@
 
 .avatar_img {
-    width: 200px;
+    width: 150px;
+    height: 150px;
+    border: 3px solid white;
+    border-radius: 50%;
 }
 
 .header_img {
-    width: 100vw;
-    height: 200px;
+
+    width: 100%;
+    height: 180px;
     object-fit: cover;
+    border-radius: 10px 10px 0 0;
 }
 
 .descriptionBlock {
     padding: 10px;
+    color: #172027;
 }
